Working build of Barcode scanning via Intents using ZXing.

--- a/FoodCraft/app/src/main/res/layout/activity_main.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/upc"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="@string/upc" />
 </RelativeLayout>
