--- a/FoodCraft/app/src/main/res/layout/activity_main.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/search_frontend"
-            android:onClick=""/>
+            android:onClick="searchActivitySwitch"/>
 
         <Button
             android:layout_width="wrap_content"
