Added Fragment support for UPC Scan

--- a/FoodCraft/app/src/main/res/layout/activity_main.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,11 @@
             android:layout_height="wrap_content"
             android:text="@string/upc_scanner"
             android:onClick="scan_barcode"/>
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_scan"
+            android:name="sfsu.csc413.foodcraft.MainActivity$ScanFragment" tools:layout="@layout/fragment_scan" />
 
     </LinearLayout>
 </RelativeLayout>
