--- a/FoodCraft/app/src/main/res/layout/activity_main.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/yummly_api"
-            android:onClick=""/>
+            android:onClick="yummlyButtonListener"/>
 
         <Button
             android:layout_width="wrap_content"
