--- a/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
+++ b/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
@@ -33,7 +33,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_weight="1">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,11 +64,30 @@
         android:layout_height="1dp"
         android:background="#000000"/>
 
-    <ListView
-        android:id="@+id/selectedIngredientsListView"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1">
-    </ListView>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true">
+            <ListView
+                android:id="@+id/selectedIngredientsListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+            </ListView>
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:hint="Search"
+            android:layout_alignParentEnd="true"
+            android:onClick="onSearchButtonClick"
+            />
+    </RelativeLayout>
 
 </LinearLayout>
