--- a/FoodCraft/app/src/main/res/layout/activity_main.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/database_backend"
-            android:onClick=""/>
+            android:onClick="dataStore"/>
 
         <Button
             android:layout_width="wrap_content"
