--- a/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
+++ b/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
@@ -82,12 +82,11 @@
         </FrameLayout>
 
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/foodcraft_search_button"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:hint=">"
             android:layout_alignParentEnd="true"
-            android:onClick="onSearchButtonClick"
             />
     </RelativeLayout>
 
