Created fragment to hold searchable ingredient list

--- a/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
+++ b/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
@@ -40,12 +40,6 @@
             android:id="@+id/fragment_holder"
             >
         </FrameLayout>
-        <ListView
-            android:id="@+id/listView1"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:fastScrollEnabled="false">
-        </ListView>
     </FrameLayout>
 
     <View
@@ -72,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/search_button">
+            android:layout_toLeftOf="@+id/foodcraft_search_button">
             <ListView
                 android:id="@+id/selectedIngredientsListView"
                 android:layout_width="match_parent"
