--- a/FoodCraft/app/src/main/res/layout/fragment_test_photo.xml
+++ b/FoodCraft/app/src/main/res/layout/fragment_test_photo.xml
@@ -14,7 +14,7 @@
         android:id="@+id/barcode_scanner_image"/>
 
 
-        <com.journeyapps.barcodescanner.CompoundBarcodeView
+<!--        <com.journeyapps.barcodescanner.CompoundBarcodeView
             android:id="@+id/barcode_scanner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,7 +28,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/zxing_viewfinder_view"/>
             </com.journeyapps.barcodescanner.BarcodeView>
-        </com.journeyapps.barcodescanner.CompoundBarcodeView>
+        </com.journeyapps.barcodescanner.CompoundBarcodeView> -->
 
     </FrameLayout>
 
