--- a/FoodCraft/app/src/main/res/layout/row_places.xml
+++ b/FoodCraft/app/src/main/res/layout/row_places.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <android.support.v7.widget.CardView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/placeCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="0dp"
+    android:layout_marginLeft="0dp"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:cardElevation="@dimen/card_elevation">
 
-    <FrameLayout
+  <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="200dp">
 
-      <ImageView
+    <ImageView
         android:id="@+id/recipeImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:transitionName="tImage" />
 
-      <LinearLayout
+    <LinearLayout
         android:id="@+id/mainHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:selectableItemBackground"
         android:orientation="horizontal" />
 
-      <LinearLayout
+    <LinearLayout
         android:id="@+id/recipeNameHolder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +38,7 @@
         android:orientation="horizontal"
         android:transitionName="tNameHolder">
 
-        <TextView
+      <TextView
           android:id="@+id/recipeName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
@@ -43,9 +46,28 @@
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@android:color/white" />
 
-      </LinearLayout>
 
-    </FrameLayout>
+    </LinearLayout>
+
+
+  </FrameLayout>
+
+  <ProgressBar
+      android:layout_width="match_parent"
+      android:layout_height="20dp"
+      android:layout_marginTop="200dp"
+      android:indeterminate="false"
+      android:id="@+id/progressBar"
+      android:max="100"
+      android:progress="50"
+
+      style="@android:style/Widget.ProgressBar.Horizontal"/>
+
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="220dp"
+      android:id="@+id/textProgress" />
 
 </android.support.v7.widget.CardView>
 
