--- a/FoodCraft/app/src/main/res/layout/list_item_selected_ingredients.xml
+++ b/FoodCraft/app/src/main/res/layout/list_item_selected_ingredients.xml
@@ -14,11 +14,18 @@
         android:textSize="18sp"
         android:textColor="#000000"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/delete"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="50dp"
-            android:text="X"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:scaleType="fitEnd"
+            android:background="#ededed"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:paddingRight="30dp"
+            android:paddingBottom="15dp"
+            android:src="@mipmap/cancel_ingredient"
+            />
 
 </RelativeLayout>
