--- a/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
@@ -146,6 +146,7 @@
                 android:paddingBottom="5dp"
                 android:textColor="#f7f9ef"
                 android:gravity="left"
+                android:onClick="glossarySearch"
                 style="@style/Base.TextAppearance.AppCompat.Small" />
 
 
