--- a/FoodCraft/app/src/main/res/layout/row_places.xml
+++ b/FoodCraft/app/src/main/res/layout/row_places.xml
@@ -16,13 +16,13 @@
       android:layout_width="match_parent"
       android:layout_height="200dp">
 
-    <ImageView
-        android:id="@+id/recipeImage"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:transitionName="tImage" />
-
+      <com.android.volley.toolbox.NetworkImageView
+          android:id="@+id/NetworkrecipeImage"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:scaleType="centerCrop"
+          android:transitionName="tImage"
+          />
     <LinearLayout
         android:id="@+id/mainHolder"
         android:layout_width="match_parent"
@@ -51,23 +51,6 @@
 
 
   </FrameLayout>
-
-  <ProgressBar
-      android:layout_width="match_parent"
-      android:layout_height="20dp"
-      android:layout_marginTop="200dp"
-      android:indeterminate="false"
-      android:id="@+id/progressBar"
-      android:max="100"
-      android:progress="50"
-
-      style="@android:style/Widget.ProgressBar.Horizontal"/>
-
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="220dp"
-      android:id="@+id/textProgress" />
 
 </android.support.v7.widget.CardView>
 
