--- a/FoodCraft/app/src/main/res/layout/activity_cardview.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_cardview.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/placeCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginTop="0dp"
     android:layout_marginRight="0dp"
     android:layout_marginLeft="0dp"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     card_view:cardElevation="@dimen/card_elevation">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
   <FrameLayout
+
       android:layout_width="match_parent"
       android:layout_height="200dp">
+      <include
+      layout="@layout/toolbar"/>
 
     <ImageView
         android:id="@+id/recipeImage"
@@ -46,29 +54,15 @@
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:textColor="@android:color/white" />
 
-
     </LinearLayout>
-
-
   </FrameLayout>
 
-  <ProgressBar
-      android:layout_width="match_parent"
-      android:layout_height="20dp"
-      android:layout_marginTop="200dp"
-      android:indeterminate="false"
-      android:id="@+id/progressBar"
-      android:max="100"
-      android:progress="50"
-
-      style="@android:style/Widget.ProgressBar.Horizontal"/>
-
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="220dp"
-      android:id="@+id/textProgress" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    android:layout_marginTop="0dp"
+    android:id="@+id/textProgress"
+    android:textColor="@android:color/white"/>
 
 </android.support.v7.widget.CardView>
-
 
