--- a/FoodCraft/app/src/main/res/layout/splash.xml
+++ b/FoodCraft/app/src/main/res/layout/splash.xml
@@ -12,6 +12,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/logo"
-    android:background="@drawable/splash_image" />
+    android:background="@drawable/foodcraftsplash" />
 
 </LinearLayout>
