--- a/FoodCraft/app/src/main/res/values-v21/colors.xml
+++ b/FoodCraft/app/src/main/res/values-v21/colors.xml
@@ -5,6 +5,56 @@
   <color name="accent">#6C7F91</color>
   <color name="light_green">#7ABA34</color>
   <color name="dark_green">#5B852D</color>
+  <color name="ColorPrimary">#A62128</color>
+  <color name="ColorPrimaryDark">#E64A19</color>
 
   <color name="photo_tint">#7f101010</color>
+
+  <color name="theme_accent_1">#00BCD4</color>
+
+  <color name="list_dropdown_foreground_normal">#FFF</color>
+  <!-- CYAN -->
+  <!-- dark -->
+  <color name="md_cyan_500_primary">#00BCD4</color>
+  <!-- light -->
+  <color name="md_cyan_50">#E0F7FA</color>
+  <color name="md_cyan_100">#B2EBF2</color>
+  <color name="md_cyan_200">#80DEEA</color>
+  <color name="md_cyan_300">#4DD0E1</color>
+  <color name="md_cyan_400">#26C6DA</color>
+  <!-- dark -->
+  <color name="md_cyan_600">#00ACC1</color>
+  <color name="md_cyan_700">#0097A7</color>
+  <color name="md_cyan_800">#00838F</color>
+  <color name="md_cyan_900">#006064</color>
+
+  <!-- light -->
+  <color name="md_cyan_A100">#84FFFF</color>
+  <color name="md_cyan_A200">#18FFFF</color>
+  <color name="md_cyan_A400">#00E5FF</color>
+  <color name="md_cyan_A700">#00B8D4</color>
+
+
+  <!-- TEAL -->
+  <!-- dark -->
+  <color name="md_teal_500_primary">#009688</color>
+  <!-- light -->
+  <color name="md_teal_50">#E0F2F1</color>
+  <color name="md_teal_100">#B2DFDB</color>
+  <color name="md_teal_200">#80CBC4</color>
+  <color name="md_teal_300">#4DB6AC</color>
+  <color name="md_teal_400">#26A69A</color>
+  <!-- dark -->
+  <color name="md_teal_600">#00897B</color>
+  <color name="md_teal_700">#00796B</color>
+  <color name="md_teal_800">#00695C</color>
+  <color name="md_teal_900">#004D40</color>
+
+  <!-- light -->
+  <color name="md_teal_A100">#A7FFEB</color>
+  <color name="md_teal_A200">#64FFDA</color>
+  <color name="md_teal_A400">#1DE9B6</color>
+  <color name="md_teal_A700">#00BFA5</color>
+
+
 </resources>
