--- a/FoodCraft/app/src/main/res/values/dimens.xml
+++ b/FoodCraft/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="button_press_elevation">18dp</dimen>
     <dimen name="card_elevation">1dp</dimen>
     <dimen name="card_corner_radius">0dp</dimen>
+    <dimen name="dropDownVerticalOffset">-52dp</dimen>
 </resources>
