--- a/FoodCraft/app/src/main/res/layout/activity_cardview.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_cardview.xml
@@ -48,20 +48,14 @@
 
       <TextView
           android:id="@+id/recipeName"
-          android:layout_width="wrap_content"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:textAppearance="?android:attr/textAppearanceLarge"
+          android:background="@color/black_50_opacity"
           android:textColor="@android:color/white" />
 
     </LinearLayout>
   </FrameLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-    android:layout_marginTop="0dp"
-    android:id="@+id/textProgress"
-    android:textColor="@android:color/white"/>
-
 </android.support.v7.widget.CardView>
 
