--- a/FoodCraft/app/src/main/res/values-v21/colors.xml
+++ b/FoodCraft/app/src/main/res/values-v21/colors.xml
@@ -7,6 +7,7 @@
   <color name="dark_green">#5B852D</color>
   <color name="ColorPrimary">#A62128</color>
   <color name="ColorPrimaryDark">#E64A19</color>
+  <color name="black_50_opacity">#80000000</color>
 
   <color name="photo_tint">#7f101010</color>
 
