--- a/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
+++ b/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
@@ -15,22 +15,9 @@
         android:layout_height="0dp"
         android:layout_weight="2">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            android:id="@+id/toolbar_holder"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        </android.support.design.widget.AppBarLayout>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/content_ingredient_toolbar" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -44,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_below="@id/toolbar_holder"
+            android:layout_below="@id/toolbar"
             android:id="@+id/searchview_container"
             >
 
@@ -68,7 +55,7 @@
                 android:layout_weight="2"
                 android:hint="Scan UPC"
                 android:onClick="togglePhotoFragment"
-                android:background="#a61218"
+                android:background="#A62128"
                 android:textColorHint="#ffffff"/>
 
         </LinearLayout>
