--- a/FoodCraft/app/src/main/res/layout/activity_cardview.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_cardview.xml
@@ -53,7 +53,9 @@
           android:gravity="left"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:background="@color/black_50_opacity"
-          android:textColor="@android:color/white" />
+          android:textColor="@android:color/white"
+          android:paddingStart="10dp"
+          android:paddingEnd="10dp"/>
 
     </LinearLayout>
   </FrameLayout>
