--- a/FoodCraft/app/src/main/res/layout/activity_glossary.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_glossary.xml
@@ -17,5 +17,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:scrollbars = "vertical"/>
 </RelativeLayout>
